# hyuabot-api-server-python

./: .gitignore  Dockerfile  README.md  mypy.ini  requirements.txt  setup.cfg
.github/workflows/: default.yml
src/app/hyuabot/api/: __init__.py  context.py  initialize_data.py  main.py
src/app/hyuabot/api/api/api_v1/: __init__.py  api.py
src/app/hyuabot/api/api/api_v1/endpoints/: shuttle.py
src/app/hyuabot/api/api/api_v1/endpoints/bus/: __init__.py  route.py  timetable.py
src/app/hyuabot/api/api/api_v1/endpoints/food/: __init__.py  campus.py  convert.py  restaurant.py
src/app/hyuabot/api/api/api_v1/endpoints/reading_room/: __init__.py  campus.py
src/app/hyuabot/api/api/api_v1/endpoints/shuttle/: __init__.py  arrival.py  location.py  route.py  stop.py  timetable.py
src/app/hyuabot/api/api/api_v1/endpoints/subway/: arrival.py
src/app/hyuabot/api/api/fetch/: __init__.py  bus.py
src/app/hyuabot/api/api/v1/: __init__.py  api.py
src/app/hyuabot/api/api/v1/endpoints/bus/: __init__.py  route.py  timetable.py
src/app/hyuabot/api/api/v1/endpoints/food/: __init__.py  campus.py  convert.py  restaurant.py
src/app/hyuabot/api/api/v1/endpoints/reading_room/: campus.py
src/app/hyuabot/api/api/v1/endpoints/shuttle/: __init__.py  arrival.py  location.py  route.py  stop.py  timetable.py
src/app/hyuabot/api/api/v1/endpoints/subway/: arrival.py
src/app/hyuabot/api/api/v2/: __init__.py  bus.py  cafeteria.py  reading_room.py  shuttle.py  subway.py
src/app/hyuabot/api/core/: config.py  database.py  date.py
src/app/hyuabot/api/core/fetch/: __init__.py  bus.py  food.py  reading_room.py  subway.py
src/app/hyuabot/api/models/postgresql/: __init__.py  bus.py  cafeteria.py  campus.py  reading_room.py  shuttle.py  subway.py
src/app/hyuabot/api/schemas/: bus.py  cafeteria.py  reading_room.py  shuttle.py  subway.py
src/app/hyuabot/api/utlis/: fastapi.py
tests/: __init__.py  fetch_bus_information.py  test_bus_endpoint.py  test_fetch_bus_information.py  test_fetch_restaurant_menu.py  test_graphql_endpoint.py  test_initialize_data.py  test_initialize_server.py  test_reading_room_endpoint.py  test_restaurant_endpoint.py  test_shuttle_endpoint.py  test_subway_endpoint.py
