[metadata]
name = hyuabot-api
version = attr: src.app.hyuabot.api.__version__
description = HYUabot API Server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hyuabot-developers
author = Jeongin Lee
author_email = jil8885@hanyang.ac.kr
license = GPLv3
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
project_urls =
    Source = https://github.com/hyuabot-developers/hyuabot-api-server
    Tracker = https://github.com/hyuabot-developers/hyuabot-api-server/issues

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.10
setup_requires =
    setuptools>=51.1.1
    wheel>=0.36.2
install_requires =
    fastapi>=0.73.0
    holidays>=0.13
    pydantic>=1.9.0
    hypercorn>=0.13.2
    aiohttp>=3.8.1
    setuptools>=58.1.0
    beautifulsoup4>=4.10.0
    starlette>=0.17.1
    pytest>=7.0.1
    httpx>=0.22.0
    grequests>=0.6.0
    gevent>=21.12.0
    lxml>=4.8.0
    psycopg2-binary>=2.9.3
    SQLAlchemy>=1.4.37
    SQLAlchemy-Utils>=0.38.2
zip_safe = false
include_package_data = true

[options.extras_require]
build =
    wheel>=0.36.2
    twine>=3.4.1
    towncrier~=21.3.0
test =
    pytest~=6.2.5
    pytest-asyncio~=0.16.0
    pytest-aiohttp>=0.3
    pytest-cov>=2.11
    pytest-mock>=3.5.0
    httpx>=0.22.0
    codecov
dev =
lint =
    flake8>=4.0.1
    flake8-commas>=2.1
typecheck =
    mypy>=0.930
    types-click
    types-Jinja2
    types-pkg_resources
    types-PyYAML
    types-python-dateutil
    types-tabulate
    types-requests

[options.packages.find]
where = src
include = app.hyuabot.*

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E129,E221,E241,E722,E731,E401,W503,W504,N801,N802
max-line-length = 105
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,docs,alembic

[tool:pytest]
testpaths = tests
filterwarnings =
    ignore::DeprecationWarning:aioredis.*:

[mypy]
ignore_missing_imports = true
mypy_path = src
namespace_packages = true
explicit_package_bases = true

[yapf]
based_on_style = facebook
spaces_before_comment = 2
column_limit = 105
blank_line_before_nested_class_or_def = true